# writing-kb

./: Dockerfile  Makefile  README.md  pyproject.toml  server.py  server_stdio.py
.claude/: settings.local.json
.github/workflows/: deploy-render.yml
craft/: character.md  dialogue.md  show-dont-tell.md
kb/structure/: act-structure.md  story-frameworks.md
structure/: pacing.md  scene-structure.md  tension.md
style/: economy.md  opening-lines.md  prose-rhythm.md
tests/: test_server.py
writing_kb/: config.py  content.py  search.py  tools.py
