[project]
name = "writing-kb"
version = "0.1.0"
description = "Writing knowledge base MCP server"
requires-python = ">=3.13"
dependencies = [
    "breame>=0.1.2",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "mcp[cli]>=1.26.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "rank-bm25>=0.2.2",
    "uvicorn>=0.42.0",
]

[tool.pytest-asyncio]
asyncio_mode = "auto"
